# fastertags

./: README.md  build.sh  check.sh  pyproject.toml  release.sh  use.py
.github/workflows/: pylint.yml
specscrape/: elements.2024-09-22.json  elements.2024-10-13.json  elements.2024-12-23.json  normalize.py  normalized.elements.2024-10-13.json  normalized.elements.2024-12-23.json  whatwg.py
src/fastertags/: __init__.py  _elements.py  _gen.py  elements.json  elements.py  headers.py  shorthands.py
test/: test_serialize.py
