[build-system]
requires = [
    "setuptools >= 73.0.0",
    "wheel >= 0.44.0",
]
build-backend = "setuptools.build_meta"

[project]
version = "0.2024.9"
name = "fastertags"
requires-python = ">=3.12"
authors = [
  { name="Julian Bertram", email="tirednesscankill@warhog.net" },
]
description = "A small example package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/scravy/fastertags"
Issues = "https://github.com/scravy/fastertags/issues"

[project.optional-dependencies]
dev = [
    "beautifulsoup4 == 4.12.3",
    "black == 24.8.0",
    "build == 1.2.1",
    "flake8 == 7.1.1",
    "html5lib == 1.1",
    "mypy == 1.11.2",
    "pylint == 3.3.0",
    "pytest == 8.3.3",
    "pytest-asyncio == 0.24.0",
    "pytest-random-order == 1.1.1",
    "twine == 5.1.1",
    "urllib3 == 2.2.3",
    "wheel == 0.44.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "elements.json"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.pytest.ini_options]
minversion = "8.3.2"
addopts = "--random-order -s"
# addopts = "--random-order -s --cov-fail-under=85 --cov-report html:coverage --cov=instrumntal"
asyncio_default_fixture_loop_scope="function"
pythonpath = ["src"]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test"]
asyncio_mode = "auto"
